# beautiful-dbt-template

./: Makefile  README.md  cookiecutter.json
dbt/: .user.yml
{{ cookiecutter.__PROJECT_SLUG }}/: Makefile  README.md  pyproject.toml
{{ cookiecutter.__PROJECT_SLUG }}/dbt/: .gitignore  dbt_project.yml  packages.yml  profiles.yml
{{ cookiecutter.__PROJECT_SLUG }}/dbt/models/: sources.yml
{{ cookiecutter.__PROJECT_SLUG }}/dbt/models/examples/highway_model_example/: README.md  hway_testmodel_1.sql  schema.yml
{{ cookiecutter.__PROJECT_SLUG }}/dbt/models/examples/simple_model_example/: README.md  simple_testmodel_1.sql
{{ cookiecutter.__PROJECT_SLUG }}/dbt/scripts/: dbt_run_all.sh  run_dbt_test_model.sh
{{ cookiecutter.__PROJECT_SLUG }}/scripts/: install_poetry_unix.sh  tar_my_dbt.sh
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/: .pre-commit-config.yaml  Makefile  README.md  XTS.md  beau.md  pyproject.toml  xos-deployments.yml
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/.beau/: Makefile
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/.beau/scripts/: check_file_name.sh  git_init.sh  install_poetry.sh
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/dbt/: README.md  dbt_project.yml  profiles.yml
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/dbt/macros/: generate_schema_name.sql
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/dbt/models/: sources.yml
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/dbt/models/examples/: README.md  example_model.sql  schema.yml
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/dbt/scripts/: dbt_run_all.sh
{{cookiecutter.__PROJECT_SLUG_KEBAB}}/scripts/setup/: install_poetry.sh
(+2 files in other folders)
