[tool.poetry]
name = "{{ cookiecutter.__PROJECT_SLUG_SNAKE }}"
version = "0.1.0"
description = "{{ cookiecutter.DESCRIPTION }}"
authors = ["{{ cookiecutter.TEAM_NAME }} <{{ cookiecutter.TEAM_EMAIL }}>"]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
dbt-snowflake = "1.4.1"
pytest = "^6.2.5"
oyaml = "1.0"
pre-commit = "2.20.0"

[tool.poetry.dev-dependencies]
sqlfluff = "^0.8.0"
sqlfluff-templater-dbt = "^0.8.0"

[tool.cruft]
skip = ["dbt/*", "Makefile", "README.md", "pyproject.toml", ".gitignore"]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
